--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <meta property="og:image" content="https://bolt.new/static/og_default.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
-    <link rel="icon" type="image/png" href="https://www.bitkitekt.com/images/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="https://www.bitkitekt.com/images/favicon.svg" />
-    <link rel="shortcut icon" href="https://www.bitkitekt.com/images/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="https://www.bitkitekt.com/images/apple-touch-icon.png" />
-    <link rel="manifest" href="https://www.bitkitekt.com/images/site.webmanifest" />
+    <link rel="icon" type="image/png" href="/images/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+    <link rel="manifest" href="/images/site.webmanifest" />
 </head>
   <body>
     <div id="root"></div>
